<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Name"/>
    <EditText
            android:id="@+id/etName"
            android:hint="@string/et_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/tv_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/etDescription"
            android:hint="@string/et_description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Language"/>
    <RadioGroup
            android:id="@+id/rbtnLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/rbtnEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbtnEnglish_text"/>
        <RadioButton
                android:id="@+id/rbtChinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnChinese_text"/>
        <RadioButton
                android:id="@+id/rbtnMalay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnMalay_text"/>
        <RadioButton
                android:id="@+id/rbtnTamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnTamil_text"/>
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ReleaseD"/>
    <EditText
            android:id="@+id/etReleaseDate"
            android:hint="@string/et_ReleaseD_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <CheckBox
            android:id="@+id/chkbxNotSuitable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_NotSuitable_text"/>
    <CheckBox
            android:id="@+id/chkbxViolence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_Violence_text"
            android:visibility="invisible"/>
    <CheckBox
            android:id="@+id/chkbxLangugeUsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_languageUsed_text"
            android:visibility="invisible"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    <Button
            android:id="@+id/btnAddMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAddMovie_text"/>
    <TextView
            android:id="@+id/tvBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

</LinearLayout>